# instant-roman-nums

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
instant_roman_nums/: __init__.py  core.py
tests/: test_instant_roman_nums.py
